Work Responsiveness debug (spacing issue) resolved

--- a/src/pages/work/work.css
+++ b/src/pages/work/work.css
@@ -42,7 +42,7 @@
 
 .container2 {
     flex: 6;
-    padding-top: 160px;
+    padding-top: 80px;
 }
 
 .spec-img {
